<resources>
    <string name="app_name">BasicUnitTest</string>
    <string name="panjang">Panjang</string>
    <string name="tinggi">Tinggi</string>
    <string name="lebar">Lebar</string>
    <string name="hasil">Hasil</string>
    <string name="btnSave">Simpan</string>
    <string name="btnKeliling">Hitung Keliling</string>
    <string name="btnLuas">Hitung Luas Area</string>
    <string name="btnVolume">Hitung Volume</string>

</resources>